Project Modelling word-wrap fix

--- a/components/ProjectModelling/ProjectModelling.module.scss
+++ b/components/ProjectModelling/ProjectModelling.module.scss
@@ -45,7 +45,7 @@
         font-size: 12px;
         line-height: 150%;
         letter-spacing: 0.025em;
-        white-space: nowrap;
+        // white-space: nowrap;
         color: #000;
 
         &:first-child {
